--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^3.3.2",
   },
   "name": "banner2",
   "version": "1.0.0",
